# honey-duck

./: .dockerignore  .env.example  .gitignore  .mcp.json  CLAUDE.md  DOCKER_QUICKSTART.md  Dockerfile  GUIDING_PRINCIPLES.md  Makefile  README.md  dagster.yaml  docker-compose.dev.yml  docker-compose.elasticsearch.yml  docker-compose.yml  lefthook.yml  mkdocs.yml  pyproject.toml  workspace.yaml
.github/workflows/: docs.yml  test.yml
cogapp_deps/: README.md  __init__.py
cogapp_deps/dagster/: __init__.py  api_sources.py  dlt_helpers.py  exceptions.py  helpers.py  io.py  io_managers.py  notifications.py  sitemap.py  validation.py  xml_sources.py
cogapp_deps/dagster/components/: __init__.py  elasticsearch.py
cogapp_deps/dagster/templates/email/: pipeline_completion.html
cogapp_deps/processors/: __init__.py  chain.py
cogapp_deps/processors/duckdb/: __init__.py  aggregate.py  join.py  sql.py  window.py
cogapp_deps/processors/pandas/: __init__.py  replace_on_condition.py
cogapp_deps/processors/polars/: __init__.py  filter.py  string_transform.py
cogapp_libs/: README.md  __init__.py
cogapp_libs/dagster/: __init__.py  api_sources.py  dlt_helpers.py  duckdb.py  exceptions.py  helpers.py  io.py  io_managers.py  lineage.py  notifications.py  sitemap.py  xml_sources.py
cogapp_libs/dagster/components/: __init__.py  elasticsearch.py
cogapp_libs/dagster/soda/: __init__.py  checks.py
cogapp_libs/dagster/templates/email/: _shared.css.j2  base.html.j2  daily_summary.html  daily_summary.html.j2  pipeline_completion.txt  pipeline_failure.html  pipeline_failure.html.j2  pipeline_success.html  pipeline_success.html.j2
cogapp_libs/processors/: __init__.py  chain.py
cogapp_libs/processors/duckdb/: __init__.py  sql.py
cogapp_libs/processors/polars/: filter.py  string_transform.py
data/input/: artists.csv  artworks.csv  media.db  sales.csv
docs/: API_BULK_HARVESTING.md  BEST_PRACTICES.md  CLI_REFERENCE.md  COGAPP_DEPS_API.md  COMMON_OUTPUTS.md  DAGSTER_BEST_PRACTICES_IMPROVEMENTS.md  DEPLOYMENT.md  ELASTICSEARCH_INTEGRATION.md  LOCALSTACK_S3_GUIDE.md  PRE_COMMIT_HOOKS.md  QUICK_START_TUTORIAL.md  TROUBLESHOOTING.md  index.md
docs/api/: dagster-helpers.md  index.md  io-managers.md  processors.md
docs/development/: cli.md  contributing.md  debugging.md  deployment.md  hooks.md  testing.md
docs/getting-started/: installation.md  quick-start.md  tutorial.md
docs/guides/: processor-equivalents.md
docs/integrations/: api-harvesting.md  common-outputs.md  elasticsearch.md  iiif-tiles.md  localstack-s3.md  pandera-validation.md  sitemaps.md  soda-validation.md  xml-harvesting.md
docs/user-guide/: best-practices.md  frontend-dashboard.md  logging-and-reporting.md  performance.md  polars-patterns.md  troubleshooting.md
examples/: xml_harvesting_example.py
examples/data/: artworks.xml  plant_catalog.xml
frontend/: README.md  biome.json  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx  providers.tsx
frontend/src/app/api/graphql/: route.ts
frontend/src/app/assets/: page.tsx
frontend/src/app/assets/[...path]/: page.tsx
frontend/src/app/jobs/: page.tsx
frontend/src/app/lineage/: page.tsx
frontend/src/app/runs/: page.tsx
frontend/src/app/runs/[runId]/: page.tsx
frontend/src/components/: FailedRunError.tsx  StatusBadge.tsx
frontend/src/lib/: config.ts  graphql.ts  queries.ts  types.ts  utils.ts
honey_duck/: __init__.py  __main__.py  base.py  definitions.py  notifications.py  pipeline.py  processors.py
honey_duck/defs/: PATTERNS.md  assets.py  assets_duckdb.py  assets_pandas.py  assets_polars.py  assets_polars_fs.py  assets_polars_multi.py  assets_polars_ops.py  checks.py  config.py  constants.py  definitions.py  dlt_assets.py  dlt_sources.py  elasticsearch_example.py  exceptions.py  helpers.py  jobs.py  notifications_example.py  resources.py  schemas.py  utils.py
honey_duck/templates/: daily_summary.html
pipelines/: full.py
scripts/: compare_processor_equivalents.py  create_media_db.py  setup_hooks.sh  simulate_docker_deployment.sh  test_docker.sh  test_processor_equivalents.py
src/honey_duck/: __init__.py  definitions.py
src/honey_duck/components/: __init__.py
src/honey_duck/defs/: __init__.py  definitions.py
src/honey_duck/defs/duckdb/: assets.py
src/honey_duck/defs/duckdb_soda/: __init__.py  assets.py  checks.py
src/honey_duck/defs/duckdb_soda/contracts/: artworks_transform.yml  sales_transform.yml
src/honey_duck/defs/harvest/: assets.py  sources.py
src/honey_duck/defs/original/: assets.py
src/honey_duck/defs/polars/: assets.py  assets_fs.py  assets_multi.py  assets_ops.py
src/honey_duck/defs/shared/: checks.py  helpers.py  jobs.py  resources.py  schemas.py  sensors.py
src/honey_duck/templates/: __init__.py  pipeline_failure.html  pipeline_success.html
tests/: __init__.py  conftest.py  test_components.py  test_dagster_helpers.py  test_integration.py  test_io_manager.py  test_linting.py  test_processors.py  test_smoke.py  test_validation.py
