[project]
name = "honey-duck"
version = "0.1.0"
description = "Polars/Parquet data pipeline with Dagster orchestration"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.1",
    "pandas>=2.2",
    "polars>=1.0",
    "pyarrow>=18.0",
    "dagster>=1.12",
    "dagster-webserver>=1.12",
    "dagster-polars>=0.24",
    "dlt>=1.20.0",
    "dagster-dlt>=0.28.8",
    "pandera>=0.28.0",
    "dagster-pandera>=0.28.8",
    "dagster-duckdb-polars>=0.28.8",
    "dagster-duckdb-pandas>=0.28.8",
    "altair>=6.0.0",
    "vl-convert-python>=1.9.0",
]

[project.optional-dependencies]
# When cogapp_deps is extracted as standalone library, these become optional
dagster = [
    "dagster>=1.12",
    "dagster-webserver>=1.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["honey_duck", "cogapp_deps"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "ruff",
    "mypy>=1.11",
    "pandas-stubs>=2.0",
    "types-requests",
    "lefthook",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "cogapp_deps.dagster.*"
disallow_untyped_defs = false
warn_return_any = false

[[tool.mypy.overrides]]
module = "honey_duck.defs.assets"
# Original processor-based implementation has complex DataFrame/LazyFrame union types
ignore_errors = true

[tool.ruff]
line-length = 100

[tool.ruff.lint.per-file-ignores]
# DuckDB uses DataFrames as table references by variable name
"honey_duck/defs/assets.py" = ["F841"]

[tool.dagster]
module_name = "honey_duck.defs"

[dependency-groups]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
    "mkdocstrings[python]>=1.0.0",
]
