[project]
name = "honey-duck"
version = "0.1.0"
description = "Polars/Parquet data pipeline with Dagster orchestration"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.1",
    "pandas>=2.2",
    "polars>=1.0",
    "pyarrow>=18.0",
    "dagster>=1.12",
    "dagster-webserver>=1.12",
    "dagster-polars>=0.24",
    "dlt>=1.20.0",
    "dagster-dlt>=0.28.8",
    "pandera>=0.28.0",
    "dagster-pandera>=0.28.8",
    "dagster-duckdb-polars>=0.28.8",
    "dagster-duckdb-pandas>=0.28.8",
    "altair>=6.0.0",
    "vl-convert-python>=1.9.0",
    "dagster-dg-cli>=1.12.8",
    "dagster-postgres>=0.28.8",
]

[project.optional-dependencies]
# When cogapp_libs is extracted as standalone library, these become optional
dagster = [
    "dagster>=1.12",
    "dagster-webserver>=1.12",
]
# Soda Core for SQL-based data validation
# NOTE: soda-core-duckdb requires duckdb<1.1.0 which conflicts with duckdb>=1.1
# For now, install manually: pip install -i https://pypi.cloud.soda.io/simple soda-duckdb>=4
# This installs soda v4 which supports modern DuckDB versions
soda = [
    # "soda-core-duckdb>=3.5",  # Conflicts with duckdb>=1.1
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/honey_duck", "cogapp_libs"]

[project.entry-points."dagster_dg_cli.registry_modules"]
honey_duck = "honey_duck.components"
cogapp_libs = "cogapp_libs.dagster.components"

[tool.ty.src]
exclude = [
    "tests/**",
    "examples/**",
    "scripts/**",
]

[tool.ty.rules]
# Optional dependencies that may not be installed (anthropic, voyageai, elasticsearch, etc.)
unresolved-import = "ignore"

[tool.ruff]
line-length = 100

[tool.ruff.lint.per-file-ignores]
# DuckDB uses DataFrames as table references by variable name
"src/honey_duck/defs/original/assets.py" = ["F841"]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
filterwarnings = [
    "ignore::DeprecationWarning:dagster",
    "ignore::UserWarning:dagster",
]

[tool.dagster]
module_name = "honey_duck.defs"

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "honey_duck"
code_location_target_module = "honey_duck.defs.definitions"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff",
    "ty>=0.0.14",
    "lefthook",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
    "mkdocstrings[python]>=1.0.0",
]
